# FastAPI-text-clf

./: README.md  app.py  model.py  pyproject.toml
